--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,25 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.appinventor.android.earthquakereportapp">
 
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name=".context.ContextGetter"
+        android:name=".util.ContextGetter"
         android:allowBackup="true"
-        android:icon="@drawable/earthquake"
+        android:icon="@drawable/ic_earthquake"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:launchMode="singleInstance">
         <activity android:name=".ui.EarthquakeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.EarthquakeDetailActivity"></activity>
+        <activity
+            android:name=".ui.EarthquakeDetailActivity"
+            android:label="@string/app_detail"
+            android:launchMode="singleInstance"
+            android:parentActivityName=".ui.EarthquakeActivity"/>
+        <activity
+            android:name=".ui.EarthquakeTriviaActivity"
+            android:label="@string/app_trivia"/>
     </application>
 
 </manifest>
