--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.appinventor.android.earthquakereportapp">
 
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -15,7 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:launchMode="singleInstance">
+        android:launchMode="standard">
         <activity android:name=".ui.EarthquakeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,11 +25,12 @@
         <activity
             android:name=".ui.EarthquakeDetailActivity"
             android:label="@string/app_detail"
-            android:launchMode="singleInstance"
+            android:launchMode="standard"
             android:parentActivityName=".ui.EarthquakeActivity"/>
         <activity
             android:name=".ui.EarthquakeTriviaActivity"
-            android:label="@string/app_trivia"/>
+            android:label="@string/app_trivia"
+            android:launchMode="standard"/>
     </application>
 
 </manifest>
